added travel section

--- a/About Me/about.html
+++ b/About Me/about.html
@@ -12,13 +12,19 @@
 	</header>
 
 	<img src="headshot.jpg">
-	<div id="about" class="clearfix">
+	<div id="about">
 		<h2>About Me</h2>
 		<p>Ever since I was a teenager, I've had a passion for traveling. The thought of entering the work force right after college didn't appeal to me, so I tried to figure out a way to travel and earn an income at the same time. Fortunately, modeling provided me with this opportunity. Over the past 15 years, I've had the privilege of traveling and modeling in numerous countries across the globe, working for some of the most prominent designers in the fashion industry. Along the way, I cultivated relationships with some of the most amazing people, whom I now consider friends. Needless to say, traveling and modeling was one the most rewarding experiences of my life.</p>
 		<p>Check out my <a href="file:///C:/Users/maper/Desktop/NYCDA/Final%20Project/Image%20Gallery/gallery.html">portfolio</a></p>
 	</div> 
+
+	<img src="slogan.jpg">
+	<div id="slogan">
+		<h2>Why Travel?</h2>
+		<p>I travel because I want to see all the beauty this world has to offer. I travel to explore. To seek adventure. To relax. To find peace. To reflect. To attain balance. To experience new things. To learn new languages. To undertand other cultures. To meet new people. To create relationships. To gain insight and persective. To enrich myself. To escape the monotonous lifestyle we all consider to be the norm.</p>
+	</div>
 	
-	<h2 class="contact">Contact Me</h2>
+	<h2 id="contact">Contact Me</h2>
 	
 </body>
 </html>
