--- a/About Me/about.html
+++ b/About Me/about.html
@@ -24,7 +24,7 @@
 		<p>I travel because I want to see all the beauty this world has to offer. I travel to explore. To seek adventure. To relax. To find peace. To reflect. To attain balance. To experience new things. To learn new languages. To undertand other cultures. To meet new people. To create relationships. To gain insight and persective. To enrich myself. To escape the monotonous lifestyle we all consider to be the norm.</p>
 	</div>
 	
-	<h2 id="contact"> <a class="hover2" href="#">Contact Me</a></h2>
+	<h2 id="contact"> <a class="hover2" href="file:///C:/Users/maper/Desktop/NYCDA/Final%20Project/Contact/contact.html">Contact Me</a></h2>
 	
 </body>
 </html>
