--- a/About Me/about.html
+++ b/About Me/about.html
@@ -19,7 +19,7 @@
 	</div> 
 
 	<img src="slogan.jpg">
-	<div id="slogan">
+	<div id="travel">
 		<h2>Why Travel?</h2>
 		<p>I travel because I want to see all the beauty this world has to offer. I travel to explore. To seek adventure. To relax. To find peace. To reflect. To attain balance. To experience new things. To learn new languages. To undertand other cultures. To meet new people. To create relationships. To gain insight and persective. To enrich myself. To escape the monotonous lifestyle we all consider to be the norm.</p>
 	</div>
